@@ -5,47 +5,48 @@ import (
 	h "github.com/elastic/beats/metricbeat/helper"
 )
 
-// Map data to MapStr of server stats variables: http://dev.mysql.com/doc/refman/5.7/en/server-status-variables.html
-// This is only a subset of the available values
-func eventMapping(status map[string]string) common.MapStr {
-
-	event := common.MapStr{
+var (
+	schema = h.NewSchema(common.MapStr{
 		"aborted": common.MapStr{
-			"clients":  h.ToInt("Aborted_clients", status),
-			"connects": h.ToInt("Aborted_connects", status),
+			"clients":  h.Int("Aborted_clients"),
+			"connects": h.Int("Aborted_connects"),
 		},
 		"binlog": common.MapStr{
 			"cache": common.MapStr{
-				"disk_use": h.ToInt("Binlog_cache_disk_use", status),
-				"use":      h.ToInt("Binlog_cache_use", status),
+				"disk_use": h.Int("Binlog_cache_disk_use"),
+				"use":      h.Int("Binlog_cache_use"),
 			},
 		},
 		"bytes": common.MapStr{
-			"received": h.ToInt("Bytes_received", status),
-			"sent":     h.ToInt("Bytes_sent", status),
+			"received": h.Int("Bytes_received"),
+			"sent":     h.Int("Bytes_sent"),
 		},
-		"connections": h.ToInt("Connections", status),
+		"connections": h.Int("Connections"),
 		"created": common.MapStr{
 			"tmp": common.MapStr{
-				"disk_tables": h.ToInt("Created_tmp_disk_tables", status),
-				"files":       h.ToInt("Created_tmp_files", status),
-				"tables":      h.ToInt("Created_tmp_tables", status),
+				"disk_tables": h.Int("Created_tmp_disk_tables"),
+				"files":       h.Int("Created_tmp_files"),
+				"tables":      h.Int("Created_tmp_tables"),
 			},
 		},
 		"delayed": common.MapStr{
-			"errors":         h.ToInt("Delayed_errors", status),
-			"insert_threads": h.ToInt("Delayed_insert_threads", status),
-			"writes":         h.ToInt("Delayed_writes", status),
+			"errors":         h.Int("Delayed_errors"),
+			"insert_threads": h.Int("Delayed_insert_threads"),
+			"writes":         h.Int("Delayed_writes"),
 		},
-		"flush_commands":       h.ToInt("Flush_commands", status),
-		"max_used_connections": h.ToInt("Max_used_connections", status),
+		"flush_commands":       h.Int("Flush_commands"),
+		"max_used_connections": h.Int("Max_used_connections"),
 		"open": common.MapStr{
-			"files":   h.ToInt("Open_files", status),
-			"streams": h.ToInt("Open_streams", status),
-			"tables":  h.ToInt("Open_tables", status),
+			"files":   h.Int("Open_files"),
+			"streams": h.Int("Open_streams"),
+			"tables":  h.Int("Open_tables"),
 		},
-		"opened_tables": h.ToInt("Opened_tables", status),
-	}
+		"opened_tables": h.Int("Opened_tables"),
+	})
+)
 
-	return event
+// Map data to MapStr of server stats variables: http://dev.mysql.com/doc/refman/5.7/en/server-status-variables.html
+// This is only a subset of the available values
+func eventMapping(status map[string]string) common.MapStr {
+	return schema.Apply(status)
 }
