@@ -13,6 +13,34 @@ import (
 var (
 	// Matches first the variable name, second the param itself
 	paramMatcher = regexp.MustCompile("([^\\s]+)\\s+(.*$)")
+	schema       = h.NewSchema(common.MapStr{
+		"version": h.Str("zk_version"),
+		"latency": common.MapStr{
+			"avg": h.Int("zk_avg_latency"),
+			"min": h.Int("zk_min_latency"),
+			"max": h.Int("zk_max_latency"),
+		},
+		"packets": common.MapStr{
+			"received": h.Int("zk_packets_received"),
+			"sent":     h.Int("zk_packets_sent"),
+		},
+		"num_alive_connections": h.Int("zk_num_alive_connections"),
+		"outstanding_requests":  h.Int("zk_outstanding_requests"),
+		"server_state":          h.Str("zk_server_state"),
+		"znode_count":           h.Int("zk_znode_count"),
+		"watch_count":           h.Int("zk_watch_count"),
+		"ephemerals_count":      h.Int("zk_ephemerals_count"),
+		"approximate_data_size": h.Int("zk_approximate_data_size"),
+	})
+	schemaLeader = h.NewSchema(common.MapStr{
+		"followers":        h.Int("zk_followers"),
+		"synced_followers": h.Int("zk_synced_followers"),
+		"pending_syncs":    h.Int("zk_pending_syncs"),
+	})
+	schemaUnix = h.NewSchema(common.MapStr{
+		"open_file_descriptor_count": h.Int("zk_open_file_descriptor_count"),
+		"max_file_descriptor_count":  h.Int("zk_max_file_descriptor_count"),
+	})
 )
 
 func eventMapping(response io.Reader) common.MapStr {
@@ -28,38 +56,16 @@ func eventMapping(response io.Reader) common.MapStr {
 		}
 	}
 
-	// Manually convert and select fields which are used
-	event := common.MapStr{
-		"version": h.ToStr("zk_version", fullEvent),
-		"latency": common.MapStr{
-			"avg": h.ToInt("zk_avg_latency", fullEvent),
-			"min": h.ToInt("zk_min_latency", fullEvent),
-			"max": h.ToInt("zk_max_latency", fullEvent),
-		},
-		"packets": common.MapStr{
-			"received": h.ToInt("zk_packets_received", fullEvent),
-			"sent":     h.ToInt("zk_packets_sent", fullEvent),
-		},
-		"num_alive_connections": h.ToInt("zk_num_alive_connections", fullEvent),
-		"outstanding_requests":  h.ToInt("zk_outstanding_requests", fullEvent),
-		"server_state":          h.ToStr("zk_server_state", fullEvent),
-		"znode_count":           h.ToInt("zk_znode_count", fullEvent),
-		"watch_count":           h.ToInt("zk_watch_count", fullEvent),
-		"ephemerals_count":      h.ToInt("zk_ephemerals_count", fullEvent),
-		"approximate_data_size": h.ToInt("zk_approximate_data_size", fullEvent),
-	}
+	event := schema.Apply(fullEvent)
 
 	// only exposed by the Leader
 	if _, ok := fullEvent["zk_followers"]; ok {
-		event["followers"] = h.ToInt("zk_followers", fullEvent)
-		event["synced_followers"] = h.ToInt("zk_synced_followers", fullEvent)
-		event["pending_syncs"] = h.ToInt("zk_pending_syncs", fullEvent)
+		schemaLeader.ApplyTo(event, fullEvent)
 	}
 
 	// only available on Unix platforms
 	if _, ok := fullEvent["open_file_descriptor_count"]; ok {
-		event["open_file_descriptor_count"] = h.ToInt("zk_open_file_descriptor_count", fullEvent)
-		event["max_file_descriptor_count"] = h.ToInt("zk_max_file_descriptor_count", fullEvent)
+		schemaUnix.ApplyTo(event, fullEvent)
 	}
 
 	return event
